...
    <string name="current_task_view_details_button">Details</string>
    <string name="due_tasks_fetch_error">Something went wrong loading the to-dos</string>
    <string name="due_tasks_empty">No to-dos due</string>
    <string name="due_today_title">Due today</string>
    <string name="edit_button">Edit</string>
    <string name="end_date_label">End date</string>
    <string name="delete_button">Delete</string>
    <string name="deadline_label">Deadline</string>
    <string name="deadline_date_label">Deadline date</string>
    <string name="deadline_chip_label">Deadline: %1$s-%2$s</string>
    <string name="deadline_time_label">Deadline time</string>
    <string name="done_button">Done</string>
    <string name="done_chip_label_unselected">Marked done</string>
    <string name="done_chip_label_selected">Done: %1$s-%2$s</string>
    <string name="mark_done_button">Mark done</string>
    <string name="more_actions_button">More actions</string>
    <string name="name_label">Name</string>
    <string name="note_label">Note</string>
    <string name="ok_button">OK</string>
    <string name="parent_task_label">Preceding to-do</string>
    <string name="recurrence_chip_label_unselected">Repeats on</string>
    <string name="recurrence_chip_label_selected">Repeats: %1$s</string>
...
